--- a/About_Me.qmd
+++ b/About_Me.qmd
@@ -1,3 +1,6 @@
+---
+title: "About Me"
+---
 Hi! I’m **Jordan Patten Hardy**: student researcher, social impact–driven engineer, and avid design enthusiast. I’m a junior Mechanical Engineering student at Brigham Young University, and I believe in engineering for the good of the world.
 
 ::: {layout-align="center"}
